Added parent filtering on show page

--- a/app/javascript/stylesheets/modules/index.scss
+++ b/app/javascript/stylesheets/modules/index.scss
@@ -1,5 +1,5 @@
 // Kittens & catteries index
-.kittens-index, .catteries-index {
+.kittens-index, .catteries-index, .filter-bar {
   h1 {
     font-size: 5em;
     font-weight: bold;
