--- a/app/javascript/stylesheets/modules/form.scss
+++ b/app/javascript/stylesheets/modules/form.scss
@@ -599,6 +599,21 @@ button.btn-delete {
   }
 }
 
+// Select thumbnail image
+.select-dropdown {
+  li {
+    img {
+      object-fit: cover;
+      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+      border-radius: 5px;
+    }
+  }
+}
+
+.cat-id {
+  display: none;
+}
+
 // Dropdown options hover effect
 .input-field {
   .dropdown-content {
