--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -241,6 +241,7 @@
     transition: ease-in-out 0.2s;
 
     &:hover {
+      cursor: pointer;
       transform: scale(1.05);
       box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
     }
