Added image carousel to pairs and litters

--- a/app/javascript/stylesheets/modules/show.scss
+++ b/app/javascript/stylesheets/modules/show.scss
@@ -225,6 +225,15 @@
       right: 0px;
       text-align: center;
     }
+    .carousel, .carousel-item {
+      max-height: 300px;
+    }
+
+    .indicators {
+      display: block;
+      transform: scale(1.3);
+      bottom: -10px;
+    }
   }
 }
 
