--- a/app/views/users/_cattery_litters.html.erb
+++ b/app/views/users/_cattery_litters.html.erb
@@ -7,10 +7,16 @@
         <i class="material-icons check-circle">check_circle</i>
         <span class="cat-id"><%= litter.litter_number %></span>
       </span>
+      <div class="carousel carousel-slider">
+        <% cattery_kittens_per_litter(litter.ids).each do |cat| %>
+          <div class="card-image">
+            <a class="carousel-item">
+              <%= image_tag(cat.thumbnail, :alt => "card picture") if cat.card_picture.attached? %>
+            </a>
+          </div>
+        <% end %>
+      </div>
       <% cattery_kittens_per_litter(litter.ids).each do |cat| %>
-        <div class="card-image">
-          <%= image_tag(cat.thumbnail, :alt => "card picture") if cat.card_picture.attached? %>
-        </div>
         <div class="card-content">
           <div class="info-block">
             <div class="row">
