--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -69,6 +69,12 @@ function ReplaceLittersWithParentsFilter(litters) {
       });
     }
     cardFilteringIcon();
+    
+    // Add image carousel for litters
+    $('#litters .carousel').carousel({ 
+      fullWidth: true,
+      indicators: true
+    });
   }
 }
 
