Added update filter dropdown on show page

--- a/app/javascript/stylesheets/modules/home.scss
+++ b/app/javascript/stylesheets/modules/home.scss
@@ -63,6 +63,7 @@
 .home-landing, .kittens-landing {
   .btn-large {
     background: $primaryColor !important;
+    margin-top: 10px;
 
     &:hover {
       background: $primaryShade4 !important;
